feat: implement users
